Update ReferenceMutator.java
make it works on java 11